# graphbench-models

./: .gitignore  GraphBench_ElectronicCircuits.ipynb  README.md  main.py  pyproject.toml
notebooks/: electronic-circuits-2.ipynb  electronic-circuits.ipynb
